Inclusão da função diagnostico e alterações em alunos

--- a/SisFiespApplication/Views/Alunos/Create.cshtml
+++ b/SisFiespApplication/Views/Alunos/Create.cshtml
@@ -63,7 +63,7 @@
                                     <h1 class="sub-title">Nome:</h1>
                                     <input id="nomeAluno" class="form-control" />
                                 </div>
-                                <div class="col-sm-4 mobile-inputs ">
+                                <div class="col-sm-2 mobile-inputs ">
                                     <h1 class="sub-title">Turno:</h1>
                                     <select id="TurnoAluno" class="form-control form-control-primary">
                                         <option value="1">Manhã</option>
@@ -71,6 +71,13 @@
                                         <option value="3">Noite</option>
                                     </select>
                                 </div>
+                                @*<div class="col-sm-2 mobile-inputs ">
+                                    <h1 class="sub-title">Turno:</h1>
+                                    <select id="StatusAluno" class="form-control form-control-primary">
+                                        <option value="1">Ativo</option>
+                                        <option value="0">Inativo</option>
+                                    </select>
+                                </div>*@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12 ">
@@ -100,7 +107,7 @@
                                 <div class="col-sm-3">
                                     <h1 class="sub-title">Escola:</h1>
                                     <select id="codigoEscola" class="form-control form-control-primary">
-                                        <option value=" ">  </option>
+                                        <option value="">  </option>
                                         @if (ViewData["Escolas"] as IEnumerable<Escola> != null)
                                         {
                                             foreach (var escola in ViewData["Escolas"] as IEnumerable<Escola>)
@@ -114,7 +121,7 @@
                                 <div class="col-sm-3">
                                     <h1 class="sub-title">Modalidade/Fase:</h1>
                                     <select id="modalidadeAluno" class="form-control form-control-primary">
-                                        <option value=" ">  </option>
+                                        <option value="">  </option>
                                         @if (ViewData["Modalidades"] as IEnumerable<Modalidade> != null)
                                         {
                                             foreach (var modalidade in ViewData["Modalidades"] as IEnumerable<Modalidade>)
@@ -128,7 +135,7 @@
                                 <div class="col-sm-3">
                                     <h1 class="sub-title">Diagnostico:</h1>
                                     <select id="diagnosticoAluno" class="form-control form-control-primary">
-                                        <option value=" ">  </option>
+                                        <option value="">  </option>
                                         @if (ViewData["Diagnosticos"] as IEnumerable<Diagnostico> != null)
                                         {
                                             foreach (var diagnostico in ViewData["Diagnosticos"] as IEnumerable<Diagnostico>)
