--- a/SisFiespApplication/Views/Shared/_Layout.cshtml
+++ b/SisFiespApplication/Views/Shared/_Layout.cshtml
@@ -441,7 +441,7 @@
                                     <ul class="pcoded-submenu">
                                         <li class="">    <a asp-area="" asp-controller="Escolas" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Escolas</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                         <li class="">    <a asp-area="" asp-controller="Diagnosticos" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Diagnósticos</span>        <span class="pcoded-mcaret"></span>    </a></li>
-                                        <li class="">    <a asp-area="" asp-controller="Modalidade" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Modalidade/Fase</span>        <span class="pcoded-mcaret"></span>    </a></li>
+                                        <li class="">    <a asp-area="" asp-controller="Modalidades" asp-action="Index" id="menuEscola">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Modalidade/Fase</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                         <li class="">    <a asp-controller="Alunos" asp-action="Index" id="menuAlunos">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Alunos</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                         <li class="">    <a asp-area="" asp-controller="Usuarios" asp-action="Index" id="menuUsuario">        <span class="pcoded-micon"><i class="ti-angle-right"></i><b>N</b></span>        <span class="pcoded-mtext" data-i18n="nav.navigate.main">Usuários</span>        <span class="pcoded-mcaret"></span>    </a></li>
                                     </ul>
@@ -537,6 +537,7 @@
     <script src="~/js/escola.js" asp-append-version="true"></script>
     <script src="~/js/aluno.js" asp-append-version="true"></script>
     <script src="~/js/diagnostico.js" asp-append-version="true"></script>
+    <script src="~/js/modalidade.js" asp-append-version="true"></script>
     @RenderSection("Scripts", required: false)
 
 </body>
