--- a/SisFiespApplication/Views/Diagnosticos/Edit.cshtml
+++ b/SisFiespApplication/Views/Diagnosticos/Edit.cshtml
@@ -17,7 +17,7 @@
                     <i class="icofont icofont-hat bg-c-pink"></i>
                     <div class="d-inline">
                         <h4>Diagnóticos</h4>
-                        <span>Editar Diagnóticos</span>
+                        <span>Editar Diagnótico</span>
                     </div>
                 </div>
             </div>
@@ -33,51 +33,51 @@
                             <a href="#!">Diagnóticos</a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a href="#!">Editar Diagnóticos</a>
+                            <a href="#!">Editar Diagnótico</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-</div>
-<!-- Page-header end -->
-<!-- Page-body start -->
-<div class="page-body">
-    <div class="row">
-        <div class="col-sm-12">
-            <!-- Zero config.table start -->
-            <div class="card">
-                <div class="card-header">
-                    <div class="card-header-right">
-                        <i class="icofont icofont-spinner-alt-5"></i>
+
+    <!-- Page-header end -->
+    <!-- Page-body start -->
+    <div class="page-body">
+        <div class="row">
+            <div class="col-sm-12">
+                <!-- Zero config.table start -->
+                <div class="card">
+                    <div class="card-header">
+                        <div class="card-header-right">
+                            <i class="icofont icofont-spinner-alt-5"></i>
+                        </div>
+                    </div>
+                    <div class="card-block">
+                        <form>
+                            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                            <div class="row">
+                                <div class="col-sm-1 mobile-inputs">
+                                    <h1 class="sub-title">Código:</h1>
+                                    <input id="codigoDiagnostico" class="form-control" value="@Model.Codigo" disabled="disabled" />
+                                </div>
+                                <div class="col-sm-6 ">
+                                    <h1 class="sub-title">Nome:</h1>
+                                    <input id="nomeDiagnostico" class="form-control" value="@Model.Nome" />
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <input style="float:right;margin-right:10px" type="button" id="btCancelarDiagnostico" value="Cancelar" onclick="location.href='@Url.Action("Index", "Diagnosticos")'" class="btn btn-danger" />
+                                <input style="float:right;margin-right:10px" type="button" onclick="salvarDiagnostico('editar')" value="Salvar" class="btn btn-primary" />
+                            </div>
+                        </form>
                     </div>
                 </div>
-                <div class="card-block">
-                    <form>
-                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-                        <div class="row">
-                            <div class="col-sm-1 mobile-inputs">
-                                <h1 class="sub-title">Código:</h1>
-                                <input id="codigoDiagnostico" class="form-control" value="@Model.Codigo" disabled="disabled" />
-                            </div>
-                            <div class="col-sm-6 ">
-                                <h1 class="sub-title">Nome:</h1>
-                                <input id="nomeDiagnostico" class="form-control" value="@Model.Nome" />
-                            </div>
-                        </div>
 
-                        <div class="form-group">
-                            <input style="float:right;margin-right:10px" type="button" id="btCancelarDiagnostico" value="Cancelar" onclick="location.href='@Url.Action("Index", "Diagnosticos")'" class="btn btn-danger" />
-                            <input style="float:right;margin-right:10px" type="button" onclick="salvarDiagnostico('editar')" value="Salvar" class="btn btn-primary" />
-                        </div>
-                    </form>
-                </div>
             </div>
-
         </div>
     </div>
-</div>
 
 
 
